// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DELETE should 200 1`] = `
Object {
  "deleteSuccess": true,
}
`;

exports[`DELETE should 500 1`] = `[TypeError: Cannot read property 'data' of undefined]`;

exports[`GET should 200 1`] = `
Object {
  "getSuccess": true,
}
`;

exports[`GET should 404 1`] = `[TypeError: Cannot read property 'data' of undefined]`;

exports[`PATCH should 200 1`] = `
Object {
  "patchSuccess": true,
}
`;

exports[`PATCH should 404 1`] = `[TypeError: Cannot read property 'data' of undefined]`;

exports[`POST should 201 1`] = `
Object {
  "postSuccess": true,
}
`;

exports[`POST should 404 1`] = `[TypeError: Cannot read property 'data' of undefined]`;

exports[`PUT should 200 1`] = `
Object {
  "putSuccess": true,
}
`;

exports[`PUT should 500 1`] = `[TypeError: Cannot read property 'data' of undefined]`;
